# bas-orchestrator

./: .gitignore  Dockerfile  Makefile  PLAN.md  README.md  UPDATE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  CHANGELOG.md  PLAN.md  PROJECT.md  ROADMAP.md  SECURITY.md
docs/specs/: AGENT_API.md  MODULE_SDK.md  POLICY.md  SCHEMA_EXPORT.md
src/bas_orchestrator/: agent_client.py  cli.py  engine.py  models.py  schema.py  summary_schema.py  summary_validate.py
src/bas_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bas_orchestrator/modules/: base.py  registry.py
tests/: test_agent_client.py  test_agent_handshake.py  test_allowlist.py  test_cli_diff_summary.py  test_cli_report.py  test_cli_validate.py  test_cli_validate_campaign.py  test_cli_validate_summary.py  test_cli_verify.py  test_engine.py  test_engine_agent.py  test_policy.py  test_policy_hash.py  test_schema_cli.py  test_schema_compat.py  test_schema_export.py  test_schema_version.py  test_summary_validate_counts.py
tests/fixtures/: campaign_basic.yaml  module_result.json  module_spec.yaml  policy.yaml
